--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "postcss-logical-property-fallbacks",
+  "name": "postcss-logical-property-polyfill",
   "version": "0.0.0",
   "description": "PostCSS plugin that will polyfill inset-inline-(start|end) and border-(start|end)-(start|end)-radius in older browsers that don't support them. The polyfill works by leveraging CSS variables, and works for sub-trees and not just globally.",
-  "keywords": ["postcss", "css", "postcss-plugin", "postcss-logical-property-fallbacks"],
+  "keywords": [
+    "postcss",
+    "css",
+    "postcss-plugin",
+    "postcss-logical-property-fallbacks"
+  ],
   "scripts": {
     "test": "jest --coverage && eslint ."
   },
@@ -30,7 +35,10 @@
       "node": true,
       "es6": true
     },
-    "extends": ["eslint:recommended", "plugin:jest/recommended"],
+    "extends": [
+      "eslint:recommended",
+      "plugin:jest/recommended"
+    ],
     "rules": {
       "jest/expect-expect": "off"
     }
