--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-logical-property-polyfill",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "PostCSS plugin that will polyfill inset-inline-(start|end) and border-(start|end)-(start|end)-radius in older browsers that don't support them. The polyfill works by leveraging CSS variables, and works for sub-trees and not just globally.",
   "keywords": [
     "postcss",
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "jest --coverage && eslint ."
   },
-  "author": "Naman Goel <nmn@fb.com>",
+  "author": "Naman Goel <naman34@gmail.com>",
   "license": "MIT",
   "repository": "nmn/postcss-logical-property-fallbacks",
   "engines": {
